tests/neg/namespace-redefintion3/main.stk
namespace test.double

def main = 10 p
